# KaenSDK-Cpp

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  forklift_example.cpp
include/roboos/: RobotSDK.h  roboos.h
include/roboos/config/: RoboOSConfig.h
include/roboos/fpr/: FPRClient.h  PaymentChannel.h  types.h
include/roboos/marketplace/: TaskMarketplace.h  types.h
include/roboos/reputation/: ReputationClient.h
include/roboos/robots/: AMRRobot.h  BaseRobot.h  CleaningRobot.h  DroneRobot.h  ForkliftRobot.h  HospitalRobot.h  RoboticArm.h
include/roboos/utils/: errors.h  http_client.h  logger.h
include/roboos/verification/: ZKVerification.h
include/roboos/wallet/: RobotWallet.h  WalletStorage.h  types.h
include/roboos/wallet/x402/: x402.h
src/: RobotSDK.cpp
src/config/: RoboOSConfig.cpp
src/fpr/: FPRClient.cpp  PaymentChannel.cpp
src/marketplace/: TaskMarketplace.cpp
src/reputation/: ReputationClient.cpp
src/robots/: AMRRobot.cpp  BaseRobot.cpp  CleaningRobot.cpp  DroneRobot.cpp  ForkliftRobot.cpp  HospitalRobot.cpp  RoboticArm.cpp
src/utils/: errors.cpp  http_client.cpp  logger.cpp
src/verification/: ZKVerification.cpp
src/wallet/: RobotWallet.cpp  WalletStorage.cpp
src/wallet/x402/: x402.cpp
